tests/fixtures/invalid/pow_str_float_none.py
# Cannot call pow() with Str, Float, None
x = pow("hello", 1.0, None)
